--- a/seminer.html
+++ b/seminer.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-	<div class="py-2 top-nav">
+  <div class="py-2 top-nav">
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-7">
@@ -73,14 +73,14 @@
                 </div>
             </div>
         </div>
-    </div>
+  </div>
     <!-- top-nav -->
 	<nav>
         <div class="container">
             <div class="nav-bar">
               <i class='ti-menu  sidebarOpen' ></i>
               <span class="logo navLogo">
-                <a href="#">
+                <a href="index.html">
                     <img src="assets/img/logo.png" alt="">
                 </a>
               </span>
@@ -94,11 +94,11 @@
                     </div>
 
                     <ul class="nav-links mb-0">
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">About</a></li>
-                      <li><a href="#">Course</a></li>
-                      <li><a href="#">Review</a></li>
-                      <li><a href="#">Contact</a></li>
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="about.html">About</a></li>
+                      <li><a href="course.html">Course</a></li>
+                      <li><a href="review.html">Reviews</a></li>
+                      <li><a href="contact.html">Contact</a></li>
                       <li>
                         <a href="#admissionModal" data-bs-toggle="modal" class="admit_btn">
                             <i class="ti-crown fw-bold"></i>
