--- a/single_course.html
+++ b/single_course.html
@@ -80,7 +80,7 @@
             <div class="nav-bar">
               <i class='ti-menu  sidebarOpen' ></i>
               <span class="logo navLogo">
-                <a href="#">
+                <a href="index.html">
                     <img src="assets/img/logo.png" alt="">
                 </a>
               </span>
@@ -94,13 +94,13 @@
                     </div>
 
                     <ul class="nav-links mb-0">
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">About</a></li>
-                      <li><a href="#">Course</a></li>
-                      <li><a href="#">Review</a></li>
-                      <li><a href="#">Contact</a></li>
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="about.html">About</a></li>
+                      <li><a href="course.html">Course</a></li>
+                      <li><a href="review.html">Reviews</a></li>
+                      <li><a href="contact.html">Contact</a></li>
                       <li>
-                        <a href="#" class="admit_btn">
+                        <a href="#admissionModal" data-bs-toggle="modal" class="admit_btn">
                             <i class="ti-crown fw-bold"></i>
                             Admission
                         </a>
@@ -132,7 +132,7 @@
                         <h5 class="fw-bold">৳15000</h5>
                     </div>
                     <p class="pe-0 pe-md-4 lead course_des">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatem odio voluptatum ipsa, blanditiis tempore sunt aliquam amet doloremque omnis iste vel quis perferendis quibusdam ratione fuga porro.</p>
-                    <div class="row text-center text-md-start">
+                    <div class="row text-center text-md-start d-flex d-md-none d-xxl-flex">
                         <div class="col-7 col-md-4">
                             <p class="fw-bold text-start"><i class="ti-time me-2 mt-1"></i> Duration: 7 Month</p>
                         </div>
@@ -141,6 +141,19 @@
                         </div>
                         <div class="col-12 col-md-3">
                             <p class="fw-bold text-center"><i class="ti-target me-2 mt-1"></i> Projects: 30+</p>
+                        </div>
+                    </div>
+                    <div class="row text-center text-md-start d-none d-md-flex d-xxl-none">
+                        <div class="d-flex justify-content-start gap-3">
+                            <div>
+                                <p class="fw-bold"><i class="ti-time me-2 mt-1"></i> Duration: 7 Month</p>
+                            </div>
+                            <div>
+                                <p class="fw-bold"><i class="ti-book me-2 mt-1"></i> Lectures: 48</p>
+                            </div>
+                            <div>
+                                <p class="fw-bold"><i class="ti-target me-2 mt-1"></i> Projects: 30+</p>
+                            </div>
                         </div>
                     </div>
                     <div class="d-block d-md-flex btns">
