--- a/single_department.html
+++ b/single_department.html
@@ -80,7 +80,7 @@
             <div class="nav-bar">
               <i class='ti-menu  sidebarOpen' ></i>
               <span class="logo navLogo">
-                <a href="#">
+                <a href="index.html">
                     <img src="assets/img/logo.png" alt="">
                 </a>
               </span>
@@ -94,13 +94,13 @@
                     </div>
 
                     <ul class="nav-links mb-0">
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">About</a></li>
-                      <li><a href="#">Course</a></li>
-                      <li><a href="#">Review</a></li>
-                      <li><a href="#">Contact</a></li>
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="about.html">About</a></li>
+                      <li><a href="course.html">Course</a></li>
+                      <li><a href="review.html">Reviews</a></li>
+                      <li><a href="contact.html">Contact</a></li>
                       <li>
-                        <a href="#" class="admit_btn">
+                        <a href="#admissionModal" data-bs-toggle="modal" class="admit_btn">
                             <i class="ti-crown fw-bold"></i>
                             Admission
                         </a>
@@ -121,17 +121,17 @@
             <div class="row course_items mt-4 justify-content-center">
                 <div class="col-12 col-md-6 col-lg-4 mt-4">
                    <div class="card">
-                       <a href="" class="img">
+                       <a href="single_course.html" class="img">
                            <img src="https://www.creativeitinstitute.com/images/course/course_1665409737.jpg" alt="" class="img-fluid">
                        </a>
                        <div class="card-body pb-2">
                            <h5>
-                               <a href="">Microsoft Office</a>
+                               <a href="single_course.html">Microsoft Office</a>
                            </h5>
                            <p class="mt-2">By: <a href="" class="mentor">Rayhanul islam</a></p>
                            <div class="d-flex justify-content-between mt-5">
                                <p>
-                                   <a href="" class="buy-btn">Enroll Now</a>
+                                   <a href="single_course.html" class="buy-btn">Admit Now</a>
                                </p>
                                <p><b>৳15000</b></p>
                            </div>
@@ -140,17 +140,17 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mt-4">
                    <div class="card">
-                       <a href="" class="img">
+                       <a href="single_course.html" class="img">
                            <img src="https://www.creativeitinstitute.com/images/course/course_1665409737.jpg" alt="" class="img-fluid">
                        </a>
                        <div class="card-body pb-2">
                            <h5>
-                               <a href="">Microsoft Office</a>
+                               <a href="single_course.html">Microsoft Office</a>
                            </h5>
                            <p class="mt-2">By: <a href="" class="mentor">Rayhanul islam</a></p>
                            <div class="d-flex justify-content-between mt-5">
                                <p>
-                                   <a href="" class="buy-btn">Enroll Now</a>
+                                   <a href="single_course.html" class="buy-btn">Admit Now</a>
                                </p>
                                <p><b>৳15000</b></p>
                            </div>
@@ -159,17 +159,17 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mt-4">
                    <div class="card">
-                       <a href="" class="img">
+                       <a href="single_course.html" class="img">
                            <img src="https://www.creativeitinstitute.com/images/course/course_1665409737.jpg" alt="" class="img-fluid">
                        </a>
                        <div class="card-body pb-2">
                            <h5>
-                               <a href="">Microsoft Office</a>
+                               <a href="single_course.html">Microsoft Office</a>
                            </h5>
                            <p class="mt-2">By: <a href="" class="mentor">Rayhanul islam</a></p>
                            <div class="d-flex justify-content-between mt-5">
                                <p>
-                                   <a href="" class="buy-btn">Enroll Now</a>
+                                   <a href="single_course.html" class="buy-btn">Admit Now</a>
                                </p>
                                <p><b>৳15000</b></p>
                            </div>
@@ -178,17 +178,17 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-4 mt-4">
                    <div class="card">
-                       <a href="" class="img">
+                       <a href="single_course.html" class="img">
                            <img src="https://www.creativeitinstitute.com/images/course/course_1665409737.jpg" alt="" class="img-fluid">
                        </a>
                        <div class="card-body pb-2">
                            <h5>
-                               <a href="">Microsoft Office</a>
+                               <a href="single_course.html">Microsoft Office</a>
                            </h5>
                            <p class="mt-2">By: <a href="" class="mentor">Rayhanul islam</a></p>
                            <div class="d-flex justify-content-between mt-5">
                                <p>
-                                   <a href="" class="buy-btn">Enroll Now</a>
+                                   <a href="single_course.html" class="buy-btn">Admit Now</a>
                                </p>
                                <p><b>৳15000</b></p>
                            </div>
