--- a/success_story.html
+++ b/success_story.html
@@ -76,40 +76,40 @@
   </div>
     <!-- top-nav -->
 	<nav>
-    <div class="container">
-      <div class="nav-bar">
-        <i class='ti-menu  sidebarOpen' ></i>
-        <span class="logo navLogo">
-          <a href="#">
-              <img src="assets/img/logo.png" alt="">
-          </a>
-        </span>
+        <div class="container">
+            <div class="nav-bar">
+              <i class='ti-menu  sidebarOpen' ></i>
+              <span class="logo navLogo">
+                <a href="index.html">
+                    <img src="assets/img/logo.png" alt="">
+                </a>
+              </span>
 
-        <div class="menu">
-            <div class="logo-toggle">
-                  <a href="#">
-                     <img src="assets/img/logo.png" alt="">
-                 </a>
-                  <i class='ti-close siderbarClose'></i>
+              <div class="menu">
+                  <div class="logo-toggle">
+                        <a href="#">
+                           <img src="assets/img/logo.png" alt="">
+                       </a>
+                        <i class='ti-close siderbarClose'></i>
+                    </div>
+
+                    <ul class="nav-links mb-0">
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="about.html">About</a></li>
+                      <li><a href="course.html">Course</a></li>
+                      <li><a href="review.html">Reviews</a></li>
+                      <li><a href="contact.html">Contact</a></li>
+                      <li>
+                        <a href="#admissionModal" data-bs-toggle="modal" class="admit_btn">
+                            <i class="ti-crown fw-bold"></i>
+                            Admission
+                        </a>
+                      </li>
+                    </ul>
               </div>
-
-              <ul class="nav-links mb-0">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Course</a></li>
-                <li><a href="#">Review</a></li>
-                <li><a href="#">Contact</a></li>
-                <li>
-                  <a href="#" class="admit_btn">
-                      <i class="ti-crown fw-bold"></i>
-                      Admission
-                  </a>
-                </li>
-              </ul>
+            </div>
         </div>
-      </div>
-    </div>
-  </nav>
+    </nav>
   <!-- navbar -->
   <section class="success_story py-5">
         <div class="container">
