--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
             <div class="nav-bar">
               <i class='ti-menu  sidebarOpen' ></i>
               <span class="logo navLogo">
-                <a href="#">
+                <a href="index.html">
                     <img src="assets/img/logo.png" alt="">
                 </a>
               </span>
@@ -93,13 +93,13 @@
                     </div>
 
                     <ul class="nav-links mb-0">
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">About</a></li>
-                      <li><a href="#">Course</a></li>
-                      <li><a href="#">Review</a></li>
-                      <li><a href="#">Contact</a></li>
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="about.html">About</a></li>
+                      <li><a href="course.html">Course</a></li>
+                      <li><a href="review.html">Reviews</a></li>
+                      <li><a href="contact.html">Contact</a></li>
                       <li>
-                        <a href="#" class="admit_btn">
+                        <a href="#admissionModal" data-bs-toggle="modal" class="admit_btn">
                             <i class="ti-crown fw-bold"></i>
                             Admission
                         </a>
@@ -143,7 +143,7 @@
                         </div>
                     </div>
                     <div>
-                        <a href="" class="about_btn mt-4">
+                        <a href="course.html" class="about_btn mt-4">
                             Browse Course
                         </a>
                     </div>
@@ -191,31 +191,31 @@
             </div>
             <div class="justify-content-center gap-3 d-none d-md-flex">
                 <div class="card">
-                    <a href="">
+                    <a href="single_department.html">
                         <img src="assets/img/basic.png" alt="">
                         <h6>Computer Fundamental</h6>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="">
+                    <a href="single_department.html">
                         <img src="assets/img/basic.png" alt="">
                         <h6>Computer Fundamental</h6>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="">
+                    <a href="single_department.html">
                         <img src="assets/img/basic.png" alt="">
                         <h6>Computer Fundamental</h6>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="">
+                    <a href="single_department.html">
                         <img src="assets/img/basic.png" alt="">
                         <h6>Computer Fundamental</h6>
                     </a>
                 </div>
                 <div class="card">
-                    <a href="">
+                    <a href="single_department.html">
                         <img src="assets/img/basic.png" alt="">
                         <h6>Computer Fundamental</h6>
                     </a>
@@ -224,7 +224,7 @@
             <div class="row d-flex d-md-none">
                 <div class="col-6 col-md-2 mt-3">
                     <div class="card">
-                        <a href="">
+                        <a href="single_department.html">
                             <img src="assets/img/basic.png" alt="">
                             <h6>Computer Fundamental</h6>
                         </a>
@@ -232,7 +232,7 @@
                 </div>
                 <div class="col-6 col-md-2 mt-3">
                     <div class="card">
-                        <a href="">
+                        <a href="single_department.html">
                             <img src="assets/img/basic.png" alt="">
                             <h6>Computer Fundamental</h6>
                         </a>
@@ -240,7 +240,7 @@
                 </div>
                 <div class="col-6 col-md-2 mt-3">
                     <div class="card">
-                        <a href="">
+                        <a href="single_department.html">
                             <img src="assets/img/basic.png" alt="">
                             <h6>Computer Fundamental</h6>
                         </a>
@@ -248,7 +248,7 @@
                 </div>
                 <div class="col-6 col-md-2 mt-3">
                     <div class="card">
-                        <a href="">
+                        <a href="single_department.html">
                             <img src="assets/img/basic.png" alt="">
                             <h6>Computer Fundamental</h6>
                         </a>
@@ -256,7 +256,7 @@
                 </div>
                 <div class="col-6 col-md-2 mt-3">
                     <div class="card">
-                        <a href="">
+                        <a href="single_department.html">
                             <img src="assets/img/basic.png" alt="">
                             <h6>Computer Fundamental</h6>
                         </a>
