--- a/career.html
+++ b/career.html
@@ -111,87 +111,114 @@
         </div>
     </nav>
     <!-- navbar -->
-    <div class="contact py-5">
+    <section class="career-header py-5">
         <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-8 text-center section-head">
-                    <h2 class="text-uppercase fs-1 mb-3 mb-md-5 text-center">Contact Us</h2>
-                </div>
-            </div>
             <div class="row">
-                <div class="col-12 col-md-6">
-                    <div class="card socal-card text-center">
-                        <div class="text-center mb-4">
-                            <img src="assets/img/call.gif" alt="" >
-                        </div>
-                        <h3 class="text-uppercase h4">You Can Contact us directly at :</h3>
-                        <p class="lead my-4 mail">
-                            <a href="mailto:ictrayhans@gmail.com">ictrayhans@gmail.com</a>
-                        </p>
-                        <p class="lead mb-0">Or You write us via the contact form</p>
-                        <p class="lead">We answer as quick as possible</p>
-                        <div class="d-flex justify-content-center">
-                            <div class="d-flex justify-content-around w-50 socal-icon">
-                                <p class="lead">
-                                    <a href="">
-                                        <i class="fa-brands fa-facebook"></i>
-                                    </a>
-                                </p>
-                                <p class="lead">
-                                    <a href="">
-                                        <i class="fa-brands fa-instagram"></i>
-                                    </a>
-                                </p>
-                                <p class="lead">
-                                    <a href="">
-                                        <i class="fa-brands fa-linkedin-in"></i>
-                                    </a>
-                                </p>
-                                <p class="lead">
-                                    <a href="">
-                                        <i class="fa-brands fa-youtube"></i>
-                                    </a>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
+                <div class="col-12 col-md-8 align-self-center">
+                    <h1 class="display-5 fw-bold">Career Development</h1>
+                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas dolor atque voluptate? Dignissimos rerum itaque veritatis quisquam autem dolorem ipsa magnam quia ipsam unde corporis, quae qui, voluptatibus reiciendis sed.</p>
                 </div>
-                <div class="col-12 col-md-6 mt-4 mt-md-0">
-                    <div class="card contact-card">
-                        <form action="" method="" class="text-start">
-                            <div class="form-floating">
-                                <input type="text" class="form-control" id="name" placeholder="Enter Name">
-                                <label for="name">Name</label>
-                            </div>
-                            <div class="form-floating mt-3">
-                                <input type="email" class="form-control" id="email" placeholder="Enter E-mail">
-                                <label for="email">Email</label>
-                            </div>
-                            <div class="form-floating mt-3">
-                                <input type="number" class="form-control" id="number" placeholder="Enter Number">
-                                <label for="number">Number</label>
-                            </div>
-                            <div class="mt-3">
-                                <select name="subject" id="subject" class="form-select form-select-lg">
-                                    <option value="Select One">Select</option>
-                                </select>
-                            </div>
-                            <div class="form-floating mt-3">
-                                <textarea name="massage" id="massage" class="form-control" placeholder="Enter Massage"></textarea>
-                                <label for="massage">Message</label>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 mt-4">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.3263834967843!2d90.36703137417396!3d23.806990286603614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c1f95d0e1503%3A0x5882b8ecae1a5a0c!2sRayhan&#39;s%20ICT!5e0!3m2!1sen!2sbd!4v1705235099844!5m2!1sen!2sbd" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="col-12 col-md-4 align-self-center">
+                    <img src="https://img.freepik.com/free-vector/business-growth-concept-illustration_114360-8666.jpg?w=740&t=st=1705584516~exp=1705585116~hmac=476f6b6cc60ba988e5dfd56cebda589ba2eb69d76f166305843ed21b2f30db7c" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
-    </div>
-    <!-- contact-section -->
+    </section>
+    <!-- career-header-end -->
+    <section class="career-process">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6 mt-4 order-1">
+                    <div class="card">
+                        <h4>Our Goal</h4>
+                        <p class="mb-0">Lorem, ipsum dolor, sit amet consectetur adipisicing elit. Id omnis, unde, est, possimus iste illum non in ratione consequuntur reiciendis provident ipsam nam quis saepe!</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 mt-4  order-3">
+                    <div class="card">
+                        <h4>Benefits of Career Development</h4>
+                        <p class="mb-0">Lorem, ipsum dolor, sit amet consectetur adipisicing elit. Id omnis, unde, est, possimus iste illum non in ratione consequuntur reiciendis provident ipsam nam quis saepe!</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 mt-4  order-4">
+                    <div class="card">
+                        <h4>Internship Opportunity</h4>
+                        <p class="mb-0">Lorem, ipsum dolor, sit amet consectetur adipisicing elit. Id omnis, unde, est, possimus iste illum non in ratione consequuntur reiciendis provident ipsam nam quis saepe!</p>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 mt-4 order-2">
+                    <div class="card">
+                        <h4>Our Process</h4>
+                        <p class="mb-0">Lorem, ipsum dolor, sit amet consectetur adipisicing elit. Id omnis, unde, est, possimus iste illum non in ratione consequuntur reiciendis provident ipsam nam quis saepe!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- career-process-section-end -->
+    <section class="brands py-3 py-lg-5">
+        <div class="container">
+           <div class="row justify-content-center">
+                <div class="col-12 col-md-8 text-center">
+                    <h2 class="text-uppercase fs-1 mb-5">Our Career Placement Partner</h2>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-4">
+                    <div class="row justify-content-center">
+                        <div class="col-6 col-md-4 align-self-center text-center mt-4 mt-md-0">
+                            <img src="assets/img/1.png" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-md-4 align-self-center text-center mt-4 mt-md-0">
+                            <img src="assets/img/2.png" alt="" class="img-fluid">
+                        </div>
+                        <div class="col-6 col-md-4 align-self-center text-center mt-4 mt-md-0">
+                            <img src="assets/img/3.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Brands-end -->
+    <section class="career_from py-3 py-lg-5">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-8 text-center">
+                    <h2 class="text-uppercase fs-1 mb-5">Send us your CV now</h2>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-7">
+                    <form action="" method="" class="text-start">
+                        <div>
+                            <label for="name">Name</label>
+                            <input type="text" class="form-control shadow-none" id="name" placeholder="Enter Name">
+                        </div>
+                        <div class="mt-3">
+                            <label for="email">Email</label>
+                            <input type="email" class="form-control shadow-none" id="email" placeholder="Enter E-mail">
+                        </div>
+                        <div class="mt-3">
+                            <label for="number">Number</label>
+                            <input type="number" class="form-control shadow-none" id="number" placeholder="Enter Number">
+                        </div>
+                        <div class="mt-3">
+                            <label for="massage">Address</label>
+                            <textarea name="massage" id="massage" class="form-control shadow-none" placeholder="Enter Massage"></textarea>
+                        </div>
+                        <div class="mt-3">
+                            <label for="file">CV(pdf only)</label>
+                            <input type="file" class="form-control shadow-none" id="file" placeholder="Enter E-mail">
+                        </div>
+                        <div class="mt-3">
+                            <input type="submit" class="form-control form-control-lg shadow-none" value="SUBMIT" name="submit">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer class="pt-3 pt-lg-5">
         <div class="container">
             <div class="row justify-content-center pb-3 pb-lg-5 top-footer">
