--- a/review.html
+++ b/review.html
@@ -80,7 +80,7 @@
             <div class="nav-bar">
               <i class='ti-menu  sidebarOpen' ></i>
               <span class="logo navLogo">
-                <a href="#">
+                <a href="index.html">
                     <img src="assets/img/logo.png" alt="">
                 </a>
               </span>
@@ -94,13 +94,13 @@
                     </div>
 
                     <ul class="nav-links mb-0">
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">About</a></li>
-                      <li><a href="#">Course</a></li>
-                      <li><a href="#">Review</a></li>
-                      <li><a href="#">Contact</a></li>
+                      <li><a href="index.html">Home</a></li>
+                      <li><a href="about.html">About</a></li>
+                      <li><a href="course.html">Course</a></li>
+                      <li><a href="review.html">Reviews</a></li>
+                      <li><a href="contact.html">Contact</a></li>
                       <li>
-                        <a href="#" class="admit_btn">
+                        <a href="#admissionModal" data-bs-toggle="modal" class="admit_btn">
                             <i class="ti-crown fw-bold"></i>
                             Admission
                         </a>
