--- a/about.html
+++ b/about.html
@@ -142,11 +142,6 @@
                             <span>Success Ratio</span>
                         </div>
                     </div>
-                    <div>
-                        <a href="course.html" class="about_btn mt-4">
-                            Browse Course
-                        </a>
-                    </div>
                 </div>
                 <div class="col-12 col-md-4 col-lg-5 text-center align-self-center d-none d-lg-block">
                     <img src="assets/img/about.gif" alt="" class="img-fluid">
@@ -184,7 +179,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-md-8 text-center section-head">
-                    <h2 class="text-uppercase fs-1 mb-0">Training Departments</h2>
+                    <h2 class="text-uppercase fs-1 mb-0">Our Departments</h2>
                     <span></span>
                     <p class="mt-1 lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptas rerum veniam.</p>
                 </div>
