--- a/career.html
+++ b/career.html
@@ -205,7 +205,7 @@
                         </div>
                         <div class="mt-3">
                             <label for="massage">Address</label>
-                            <textarea name="massage" id="massage" class="form-control shadow-none" placeholder="Enter Massage"></textarea>
+                            <textarea name="massage" id="massage" class="form-control shadow-none" placeholder="Enter Address"></textarea>
                         </div>
                         <div class="mt-3">
                             <label for="file">CV(pdf only)</label>
