--- a/course.html
+++ b/course.html
@@ -115,7 +115,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-12 col-md-8 text-center section-head">
-                    <h2 class="text-uppercase fs-1 mb-0 mb-4">Training Departments</h2>
+                    <h2 class="text-uppercase fs-1 mb-0 mb-4">Our Departments</h2>
                 </div>
             </div>
             <div class="justify-content-center gap-3 d-none d-md-flex">
