--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
                       <li><a href="index.html">Home</a></li>
                       <li><a href="about.html">About</a></li>
                       <li><a href="course.html">Course</a></li>
-                      <li><a href="review.html">Reviews</a></li>
+                      <li><a href="review.html" class="nav_success_btn">Success</a></li>
+                      <li><a href="career.html">Career</a></li>
                       <li><a href="contact.html">Contact</a></li>
                       <li>
                         <a href="#admissionModal" data-bs-toggle="modal" class="admit_btn">
@@ -989,7 +990,7 @@
                             <a class="btn demo_class btn-lg" href="seminer.html">Apply For Demo Class</a>
                         </div>
                         <div class="ms-0 ms-md-3 mt-2 mt-md-0">
-                            <a class="btn browse_course btn-primary btn-lg" href="course.html">Browse Courses</a>
+                            <a class="btn browse_course btn-lg" href="course.html">Browse Courses</a>
                         </div>
                         <div class="ms-0 ms-md-3 mt-2 mt-md-0">
                             <a class="btn free_seminer btn-lg" href="seminer.html">Join Free Seminar</a>
