--- a/contact.html
+++ b/contact.html
@@ -121,15 +121,15 @@
             <div class="row">
                 <div class="col-12 col-md-6">
                     <div class="card socal-card text-center">
-                        <div class="text-center mb-4">
+                        <div class="text-center mb-2">
                             <img src="assets/img/call.gif" alt="" >
                         </div>
-                        <h3 class="text-uppercase h4">You Can Contact us directly at :</h3>
-                        <p class="lead my-4 mail">
-                            <a href="mailto:ictrayhans@gmail.com">ictrayhans@gmail.com</a>
+                        <h3 class="text-uppercase h2 fw-bold">You Can Contact us directly at :</h3>
+                        <p class="lead my-2 mail">
+                            <a href="mailto:ictrayhans@gmail.com">contact@rayhansict.com</a>
                         </p>
-                        <p class="lead mb-0">Or You write us via the contact form</p>
-                        <p class="lead">We answer as quick as possible</p>
+                        <p class="lead mb-0 small-title">Or You write us via the contact form</p>
+                        <p class="lead small-title">We answer as quick as possible</p>
                         <div class="d-flex justify-content-center">
                             <div class="d-flex justify-content-around w-50 socal-icon">
                                 <p class="lead">
@@ -160,24 +160,24 @@
                     <div class="card contact-card">
                         <form action="" method="" class="text-start">
                             <div class="form-floating">
-                                <input type="text" class="form-control" id="name" placeholder="Enter Name">
+                                <input type="text" class="form-control shadow-none" id="name" placeholder="Enter Name">
                                 <label for="name">Name</label>
                             </div>
                             <div class="form-floating mt-3">
-                                <input type="email" class="form-control" id="email" placeholder="Enter E-mail">
+                                <input type="email" class="form-control shadow-none" id="email" placeholder="Enter E-mail">
                                 <label for="email">Email</label>
                             </div>
                             <div class="form-floating mt-3">
-                                <input type="number" class="form-control" id="number" placeholder="Enter Number">
+                                <input type="number" class="form-control shadow-none" id="number" placeholder="Enter Number">
                                 <label for="number">Number</label>
                             </div>
                             <div class="mt-3">
-                                <select name="subject" id="subject" class="form-select form-select-lg">
+                                <select name="subject" id="subject" class="form-select shadow-none form-select-lg">
                                     <option value="Select One">Select</option>
                                 </select>
                             </div>
                             <div class="form-floating mt-3">
-                                <textarea name="massage" id="massage" class="form-control" placeholder="Enter Massage"></textarea>
+                                <textarea name="massage" id="massage" class="form-control shadow-none" placeholder="Enter Massage"></textarea>
                                 <label for="massage">Message</label>
                             </div>
                         </form>
