--- a/career.html
+++ b/career.html
@@ -119,7 +119,7 @@
                     <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas dolor atque voluptate? Dignissimos rerum itaque veritatis quisquam autem dolorem ipsa magnam quia ipsam unde corporis, quae qui, voluptatibus reiciendis sed.</p>
                 </div>
                 <div class="col-12 col-md-4 align-self-center">
-                    <img src="https://img.freepik.com/free-vector/business-growth-concept-illustration_114360-8666.jpg?w=740&t=st=1705584516~exp=1705585116~hmac=476f6b6cc60ba988e5dfd56cebda589ba2eb69d76f166305843ed21b2f30db7c" alt="" class="img-fluid">
+                    <img src="assets/img/career.png" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
