--- a/contact.html
+++ b/contact.html
@@ -186,7 +186,7 @@
             </div>
             <div class="row">
                 <div class="col-12 mt-4">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3650.3263834967843!2d90.36703137417396!3d23.806990286603614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3755c1f95d0e1503%3A0x5882b8ecae1a5a0c!2sRayhan&#39;s%20ICT!5e0!3m2!1sen!2sbd!4v1705235099844!5m2!1sen!2sbd" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://maps.google.com/maps?q=dhaka&output=embed" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
